@@ -12,6 +12,11 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : major
+Frequency  : on start mds
+Bugzilla   : 14884
+Description: Implement get_info(last_id) in obdfilter.
+
 Severity   : normal
 Frequency  : occasional
 Bugzilla   : 13537
